Images in table

--- a/reserveren/index.html
+++ b/reserveren/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Toneel.nl</title>
-        <link href="css/style.css" type="text/css" rel="stylesheet" />
+        <link href="../css/style.css" type="text/css" rel="stylesheet" />
         <meta charset="UTF-8">
 		<meta name="description" content="Introductie Houtse Toneelgroep">
 		<meta name="keywords" content="toneel, houtse toneelgroep">
@@ -17,11 +17,11 @@
 		   		
 		   		<div class="menu">
 			   		<ul>
-		   				<li><a href="index.html">Home</a></li>
-		   				<li><a href="actueel">Actueel</a></li>
-		   				<li><a href="contact">Contact</a></li>
-		   				<li><a href="reserveren">Reserveren</a></li>
-		   				<li><a href="toneelspelen">Toneelspelen?</a></li>
+		   				<li><a href="../index.html">Home</a></li>
+		   				<li><a href="../actueel">Actueel</a></li>
+		   				<li><a href="../contact">Contact</a></li>
+		   				<li><a href="../reserveren">Reserveren</a></li>
+		   				<li><a href="../toneelspelen">Toneelspelen?</a></li>
 		   			</ul>
 		   		</div>
 
