--- a/toneelspelen/index.html
+++ b/toneelspelen/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-"http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Toneel.nl</title>
-        <link href="css/style.css" type="text/css" rel="stylesheet" />
+        <link href="../css/style.css" type="text/css" rel="stylesheet" />
         <meta charset="UTF-8">
 		<meta name="description" content="Introductie Houtse Toneelgroep">
 		<meta name="keywords" content="toneel, houtse toneelgroep">
@@ -17,11 +16,11 @@
 		   		
 		   		<div class="menu">
 			   		<ul>
-		   				<li><a href="index.html">Home</a></li>
-		   				<li><a href="actueel">Actueel</a></li>
-		   				<li><a href="contact">Contact</a></li>
-		   				<li><a href="reserveren">Reserveren</a></li>
-		   				<li><a href="toneelspelen">Toneelspelen?</a></li>
+		   				<li><a href="../index.html">Home</a></li>
+		   				<li><a href="../actueel">Actueel</a></li>
+		   				<li><a href="../contact">Contact</a></li>
+		   				<li><a href="../reserveren">Reserveren</a></li>
+		   				<li><a href="../toneelspelen">Toneelspelen?</a></li>
 		   			</ul>
 		   		</div>
 
@@ -29,7 +28,7 @@
    			
    			<div id="main_content" class="grid_9">
    				<h1>Houtse Toneelgroep</h1>
-   				<img src="images/IMG_4095C-422x282.jpg" alt="Groepsfoto Tovenaar van Oz" title="De Houtse Toneelgroep speelde in 2014 De Tovenaar van Oz." width="422" height="282" class="img_right_wrap"/>
+   				<img src="../images/IMG_4095C-422x282.jpg" alt="Groepsfoto Tovenaar van Oz" title="De Houtse Toneelgroep speelde in 2014 De Tovenaar van Oz." width="422" height="282" class="img_right_wrap"/>
    				<p>We gaan terug in de tijd, naar 1975, het jaar waarin de Houtse Toneelgroep opgericht werd als onderdeel van de S.O.M. (Samenlevings Opbouw Mierlo-Hout). 
    					De reden hiervoor was, dat in de jaren zeventig allerlei jeugd-clubs werden opgericht met uiteenlopende activiteiten. 
    					Aangezien er een duidelijke wens was om de jeugd ook kennis te laten maken met toneel, was het zorgen voor leiding noodzakelijk. 
