--- a/contact/index.html
+++ b/contact/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-"http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Toneel.nl</title>
-        <link href="css/contact.css" type="text/css" rel="stylesheet" />
+        <link href="../css/contact.css" type="text/css" rel="stylesheet" />
         <meta charset="UTF-8">
 		<meta name="description" content="Introductie Houtse Toneelgroep">
 		<meta name="keywords" content="toneel, houtse toneelgroep">
@@ -17,11 +16,11 @@
 		   		
 		   		<div class="menu">
 			   		<ul>
-		   				<li><a href="index.html">Home</a></li>
-		   				<li><a href="actueel">Actueel</a></li>
-		   				<li><a href="contact">Contact</a></li>
-		   				<li><a href="reserveren">Reserveren</a></li>
-		   				<li><a href="toneelspelen">Toneelspelen?</a></li>
+		   				<li><a href="../index.html">Home</a></li>
+		   				<li><a href="../actueel">Actueel</a></li>
+		   				<li><a href="../contact">Contact</a></li>
+		   				<li><a href="../reserveren">Reserveren</a></li>
+		   				<li><a href="../toneelspelen">Toneelspelen?</a></li>
 		   			</ul>
 		   		</div>
 
