--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-"http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <title>Toneel.nl</title>
-        <link href="css/style.css" type="text/css" rel="stylesheet" />
+        <link href="css/style.css" type="text/css" rel="stylesheet"/>
         <meta charset="UTF-8">
-		<meta name="description" content="Introductie Houtse Toneelgroep">
-		<meta name="keywords" content="toneel, houtse toneelgroep">
-		<meta name="author" content="Johan Vergeer">
+		<meta name="description" content="Introductie Houtse Toneelgroep"/>
+		<meta name="keywords" content="toneel, houtse toneelgroep"/>
+		<meta name="author" content="Johan Vergeer"/>
     </head>
     <body>
     	<div class="container">
