--- a/index.html
+++ b/index.html
@@ -4,15 +4,24 @@
         <title>Hoofdpagina IWP</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Introductie Houtse Toneelgroep"/>
+        <meta name="keywords" content="toneel, houtse toneelgroep"/>
+        <meta name="author" content="Johan Vergeer"/>
+        <link href="css/style.css" type="text/css" rel="stylesheet"/>
     </head>
     <body>
-        <ul>
-            <li><a href="iwp1_houtse_toneelgroep">html website Houtse Toneelgroep</a></li>
-            <li><a href="basis_php">Opdrachten basis php</a></li>
-            <li><a href="iwp1_houtse_toneelgroep_php">php website Houtse Toneelgroep</a></li>
-            <li><a href="iwp2_vriendenboek">vriendenboek</a></li>
-        </ul>
-
-        
+        <div class="container">
+            <div class="header_fixed">
+                <h1 id="header">Hoofdpagina IWP</h1>                
+            </div>
+            <div id="main_content">
+                <ul>
+                    <li><a href="iwp1_houtse_toneelgroep">html website Houtse Toneelgroep</a></li>
+                    <li><a href="iwp1_basis_php">Opdrachten basis php</a></li>
+                    <li><a href="iwp1_houtse_toneelgroep_php">php website Houtse Toneelgroep</a></li>
+                    <li><a href="iwp2_vriendenboek">vriendenboek</a></li>
+                </ul>
+            </div>
+        </div>        
     </body>
 </html>
