[ADD]Cleaning up code / Finished Website Houtse Toneelgroep

--- a/iwp1_houtse_toneelgroep/index.html
+++ b/iwp1_houtse_toneelgroep/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <title>Toneel.nl</title>
         <link href="css/style.css" type="text/css" rel="stylesheet"/>
-        <meta charset="UTF-8">
-		<meta name="description" content="Introductie Houtse Toneelgroep"/>
-		<meta name="keywords" content="toneel, houtse toneelgroep"/>
-		<meta name="author" content="Johan Vergeer"/>
+        <meta charset="UTF-8"/>
+        <meta name="description" content="Introductie Houtse Toneelgroep"/>
+        <meta name="keywords" content="toneel, houtse toneelgroep"/>
+        <meta name="author" content="Johan Vergeer"/>
     </head>
     <body>
     	<div class="container">
